[package]
name = "dork_parser_1"
version = "0.1.0"
authors = ["ForeztGump - TB"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
rand = "0.8.3"
url = "2.2.2"
crossterm = "0.19.0"
serde_json = "1.0"
indicatif = "0.16.1"
chrono = { version = "0.4", features = ["unstable-locales"] }
ureq = {version = "2.1.1", features = ["json","socks-proxy"] }
serde = { version = "1.0", features = ["derive"] }